# ugly

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  shaders
ext/include/: image.h
ext/src/: image.cpp
include/: buffer.h  context.h  context_instantiations.inl  controller.h  enum.h  exception.h  framebuffer.h  generated_object.h  gl_type.h  log.h  ogl.h  pipeline.h  program.h  query.h  renderbuffer.h  sampler.h  shader.h  texture.h  texture_unit.h  transform_feedback.h  ugly.h  uniform.h  uniform_buffer.h  vbo.h  vertex_array.h  viewport.h
libugly.xcodeproj/: project.pbxproj
src/: bindguard.cpp  buffer.cpp  buffer.h  context.cpp  controller.cpp  enum.cpp  framebuffer.cpp  generated_object.cpp  gl_type.h  object.cpp  pipeline.cpp  pipeline.h  program.cpp  program.h  query.cpp  query.h  renderbuffer.cpp  renderbuffer.h  sampler.cpp  shader.cpp  texture.cpp  texture_unit.cpp  transform_feedback.cpp  uniform.cpp  uniform_buffer.cpp  vertex_array.cpp  vertex_array.h
src/ugly/: buffer.cpp  context.cpp  context.h  framebuffer.cpp  gl_type.h  pipeline.cpp  shader.h  texture.cpp  texture.h  texture_unit.cpp  texture_unit.h  ugly.h  uniform.cpp  uniform_buffer.h
src/ugly-ext/: image.h
test/: demo.cpp  glfw_app.cpp  glfw_app.h  main.cpp
test/shaders/: bad_syntax.glsl  frag.glsl  geo.glsl  tess_control.glsl  tess_eval.glsl  vert.glsl
test/shaders/blur/: frag0.glsl  frag1.glsl
test/shaders/demo/: frag.glsl  geo.glsl  tess_control.glsl  tess_eval.glsl  vert.glsl
ugly tests/: Info.plist  ugly_tests.mm
